// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RowTD view, error not select 1`] = `
<tr
  className="sc-htpNat jpjkcF"
  selected={false}
>
  <td>
    2018-5-3
  </td>
  <td>
    AI
  </td>
  <td>
    15.4
    <span
      className="sc-bxivhb illsPj"
    >
      
    </span>
  </td>
  <td>
    <span
      className="sc-ifAKCX cpuQTc"
    >
      116239
    </span>
    <svg
      className="sc-bwzfXH cxHokv sc-bdVaJa dgUyFF"
      fill="green"
      height="16px"
      viewBox="0 0 24 24"
      width="16px"
      x="0px"
      y="0px"
    >
      <path
        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
      />
    </svg>
  </td>
  <td>
    <span
      className="sc-ifAKCX cpuQTc"
    >
      116312
    </span>
    <svg
      className="sc-bwzfXH cxHokv sc-bdVaJa dgUyFF"
      fill="green"
      height="16px"
      viewBox="0 0 24 24"
      width="16px"
      x="0px"
      y="0px"
    >
      <path
        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
      />
    </svg>
  </td>
  <td>
    73
  </td>
  <td>
    <span
      className="sc-ifAKCX hNONCD"
    >
      40.47
    </span>
    <svg
      className="sc-bwzfXH cxHokv sc-bdVaJa dgUyFF"
      fill="green"
      height="16px"
      viewBox="0 0 24 24"
      width="16px"
      x="0px"
      y="0px"
    >
      <path
        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
      />
    </svg>
  </td>
  <td>
    <span>
      0
      <svg
        className="sc-bwzfXH cxHokv sc-bdVaJa dgUyFF"
        fill="green"
        height="16px"
        viewBox="0 0 24 24"
        width="16px"
        x="0px"
        y="0px"
      >
        <path
          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
        />
      </svg>
    </span>
  </td>
  <td>
    11.24
  </td>
  <td
    className="sc-EHOje eylSLQ"
  >
    29.23
  </td>
  <td>
    <svg
      className="sc-bdVaJa dgUyFF"
      fill="red"
      height={24}
      viewBox="0 0 24 24"
      width={24}
      x="0px"
      y="0px"
    >
      <path
        d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
      />
    </svg>
  </td>
</tr>
`;

exports[`RowTD view, error select 1`] = `
<tr
  className="sc-htpNat fRsJUA"
  selected={true}
>
  <td>
    2018-5-3
  </td>
  <td>
    AI
  </td>
  <td>
    15.4
    <span
      className="sc-bxivhb illsPj"
    >
      
    </span>
  </td>
  <td>
    <span
      className="sc-ifAKCX cpuQTc"
    >
      116239
    </span>
    <svg
      className="sc-bwzfXH cxHokv sc-bdVaJa dgUyFF"
      fill="green"
      height="16px"
      viewBox="0 0 24 24"
      width="16px"
      x="0px"
      y="0px"
    >
      <path
        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
      />
    </svg>
  </td>
  <td>
    <span
      className="sc-ifAKCX cpuQTc"
    >
      116312
    </span>
    <svg
      className="sc-bwzfXH cxHokv sc-bdVaJa dgUyFF"
      fill="green"
      height="16px"
      viewBox="0 0 24 24"
      width="16px"
      x="0px"
      y="0px"
    >
      <path
        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
      />
    </svg>
  </td>
  <td>
    73
  </td>
  <td>
    <span
      className="sc-ifAKCX hNONCD"
    >
      40.47
    </span>
    <svg
      className="sc-bwzfXH cxHokv sc-bdVaJa dgUyFF"
      fill="green"
      height="16px"
      viewBox="0 0 24 24"
      width="16px"
      x="0px"
      y="0px"
    >
      <path
        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
      />
    </svg>
  </td>
  <td>
    <span>
      0
      <svg
        className="sc-bwzfXH cxHokv sc-bdVaJa dgUyFF"
        fill="green"
        height="16px"
        viewBox="0 0 24 24"
        width="16px"
        x="0px"
        y="0px"
      >
        <path
          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
        />
      </svg>
    </span>
  </td>
  <td>
    11.24
  </td>
  <td
    className="sc-EHOje eylSLQ"
  >
    29.23
  </td>
  <td>
    <svg
      className="sc-bdVaJa dgUyFF"
      fill="red"
      height={24}
      viewBox="0 0 24 24"
      width={24}
      x="0px"
      y="0px"
    >
      <path
        d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
      />
    </svg>
  </td>
</tr>
`;

exports[`RowTD view, not error not select 1`] = `
<tr
  className="sc-htpNat jpjkcF"
  selected={false}
>
  <td>
    2018-5-3
  </td>
  <td>
    AI
  </td>
  <td>
    15.4
    <span
      className="sc-bxivhb illsPj"
    >
      
    </span>
  </td>
  <td>
    <span
      className="sc-ifAKCX cpuQTc"
    >
      116239
    </span>
    <svg
      className="sc-bwzfXH cxHokv sc-bdVaJa dgUyFF"
      fill="green"
      height="16px"
      viewBox="0 0 24 24"
      width="16px"
      x="0px"
      y="0px"
    >
      <path
        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
      />
    </svg>
  </td>
  <td>
    <span
      className="sc-ifAKCX cpuQTc"
    >
      116312
    </span>
    <svg
      className="sc-bwzfXH cxHokv sc-bdVaJa dgUyFF"
      fill="green"
      height="16px"
      viewBox="0 0 24 24"
      width="16px"
      x="0px"
      y="0px"
    >
      <path
        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
      />
    </svg>
  </td>
  <td>
    73
  </td>
  <td>
    <span
      className="sc-ifAKCX cpuQTc"
    >
      40.47
    </span>
    <svg
      className="sc-bwzfXH cxHokv sc-bdVaJa dgUyFF"
      fill="green"
      height="16px"
      viewBox="0 0 24 24"
      width="16px"
      x="0px"
      y="0px"
    >
      <path
        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
      />
    </svg>
  </td>
  <td>
    <span>
      0
      <svg
        className="sc-bwzfXH cxHokv sc-bdVaJa dgUyFF"
        fill="green"
        height="16px"
        viewBox="0 0 24 24"
        width="16px"
        x="0px"
        y="0px"
      >
        <path
          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
        />
      </svg>
    </span>
  </td>
  <td>
    11.24
  </td>
  <td
    className="sc-EHOje eylSLQ"
  >
    29.23
  </td>
  <td>
    <svg
      className="sc-bdVaJa dgUyFF"
      fill="red"
      height={24}
      viewBox="0 0 24 24"
      width={24}
      x="0px"
      y="0px"
    >
      <path
        d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
      />
    </svg>
  </td>
</tr>
`;
